# OCR-platform

./: .gitignore  Makefile  README.md
apps/api/: Dockerfile  README_API.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: routes_docs.py  routes_jobs.py
apps/api/app/core/: config.py  deps.py  logging.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py
apps/api/app/schemas/: jobs.py  ocr.py
apps/api/app/services/: jobs_service.py  storage_service.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: worker.py
apps/worker/app/core/: config.py  logging.py
apps/worker/app/db/: __init__.py  base.py  models.py  session.py
apps/worker/app/services/: db_service.py  storage_service.py
apps/worker/app/tasks/: ocr_tasks.py
apps/worker/detect_output/: detect_summary.json  page_0000_boxes.json
apps/worker/scripts/: test_detect_pdf.py  test_ocr_job.py
docs/: CELERY_WORKFLOW.md  GIT_GITHUB.md
frontend-angular/: DEBUGGING.md  MIGRATION_SUMMARY.md  README.md  angular.json  package-lock.json  package.json
frontend-angular/src/: index.html  styles.scss
frontend-angular/src/app/: app.component.scss  app.config.ts  app.routes.ts
frontend-angular/src/app/components/docs/: docs.component.html  docs.component.scss  docs.component.ts
frontend-angular/src/app/components/json-editor/: json-editor.component.html  json-editor.component.scss  json-editor.component.ts
frontend-angular/src/app/components/node-editor/: node-editor.component.html  node-editor.component.scss
frontend-angular/src/app/components/pdf-viewer/: pdf-viewer.component.html  pdf-viewer.component.scss  pdf-viewer.component.ts
frontend-angular/src/app/components/structure-tree/: structure-tree.component.html  structure-tree.component.scss  structure-tree.component.ts
frontend-angular/src/app/features/admin-rag/: admin-rag.component.html  admin-rag.component.scss  admin-rag.component.ts
frontend-angular/src/app/features/chat/: chat.component.html  chat.component.scss  chat.component.ts
frontend-angular/src/app/features/home/: home.component.html  home.component.scss
frontend-angular/src/app/models/: source-map.model.ts  structure-node.model.ts
frontend-angular/src/app/services/: document.service.ts  rag-api.service.ts
infra/: .env.example  docker-compose.yml  system_config.yml
infra/migrations/: add_ocr_jobs_detect_result.sql
libs/ocr_core/: pyproject.toml
libs/ocr_core/ocr_core/: __init__.py  config_loader.py
libs/ocr_core/ocr_core/domain/: models.py
libs/ocr_core/ocr_core/engines/: __init__.py  vietocr_engine.py
libs/ocr_core/ocr_core/infra/: image_io.py
libs/ocr_core/ocr_core/pipeline/: detect.py  orchestrator.py  postprocess.py  preprocess.py  recognize.py
