[project]
name = "ocr-worker"
version = "0.1.0"
description = "OCR Platform Worker"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "psycopg[binary]>=3.2.0",
    "boto3>=1.35.0",
    "pydantic>=2.7.0",
    "pillow>=10.4.0",
    "ocr-core",
]

[tool.uv.sources]
ocr-core = { path = "../../libs/ocr_core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
